@@ -12,7 +12,9 @@
      character(LEN=1), PARAMETER   :: version_major= __VERSION_MAJOR
      character(LEN=1), PARAMETER   :: version_minor= __VERSION_MINOR
      character(LEN=1), PARAMETER   :: version_patch= __VERSION_PATCH
-     character(LEN=10),PARAMETER   :: version_number=  version_major//"."//  &
+     character(LEN=10),PARAMETER   :: version_label= __VERSION_LABEL
+     character(LEN=20),PARAMETER   :: version_number=  version_major//"."//  &
                                                        version_minor//"."//  &
-                                                       version_patch
+                                                       version_patch//       &
+                                                       TRIM(version_label)
    END MODULE version_module
